// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly action list disabled 1`] = `<div />`;

exports[`should render correctly action list not disabled 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
    style="--size: 12;"
  />
  <div>
    <div
      class="object-panel-item active"
      id="mock-action-list"
    >
      <div
        class="main"
      >
        <div>
          mock content
        </div>
      </div>
      <div
        class="label"
      >
        mock-label
      </div>
    </div>
  </div>
  <div
    class="adm-popover adm-popover-light action-list"
  >
    <div
      class="adm-popover-arrow"
    >
      <svg
        class="adm-popover-arrow-icon"
        viewBox="0 0 30 16"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M0,0 L30,0 L18.07289,14.312538 C16.65863,16.009645 14.13637,16.238942 12.43926,14.824685 C12.25341,14.669808 12.08199,14.49839 11.92711,14.312538 L0,0 L0,0 Z"
          />
        </g>
      </svg>
    </div>
    <div
      class="adm-popover-inner"
    >
      <div
        class="adm-popover-inner-content"
      >
        <div>
          <div
            class="action"
          >
            <span>
              mock icon 1
            </span>
            <span
              class="label"
            >
              mock action 1
            </span>
          </div>
          <div
            class="action disabled"
          >
            <span>
              mock icon 2
            </span>
            <span
              class="label"
            >
              mock action 2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render correctly basic item disabled 1`] = `<div />`;

exports[`should render correctly basic item not disabled 1`] = `
<div>
  <div
    class="object-panel-item"
    id="mock-item"
  >
    <div
      class="main"
    >
      <div>
        mock content
      </div>
    </div>
    <div
      class="label"
    >
      mock-label
    </div>
  </div>
</div>
`;

exports[`should render correctly divider 1`] = `
<div>
  <div
    class="adm-divider adm-divider-vertical adm-divider-center divider"
  />
</div>
`;

exports[`should render correctly number item when unit is degree 1`] = `
<div>
  <div
    class="mask hide"
  />
  <div
    class="object-panel-item"
    id="mock-number-item-angle"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item"
        type="button"
      >
        <span>
          1
          °
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      mock-label
    </div>
  </div>
</div>
`;

exports[`should render correctly number item when unit is inch 1`] = `
<div>
  <div
    class="mask hide"
  />
  <div
    class="object-panel-item"
    id="mock-number-item-inch"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item"
        type="button"
      >
        <span>
          0.0394
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      mock-label
    </div>
  </div>
</div>
`;

exports[`should render correctly number item when unit is mm 1`] = `
<div>
  <div
    class="mask hide"
  />
  <div
    class="object-panel-item"
    id="mock-number-item-mm"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item"
        type="button"
      >
        <span>
          1
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      mock-label
    </div>
  </div>
</div>
`;

exports[`should render correctly number item when unit is mm 2`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
    style="--size: 12;"
  />
  <div>
    <div
      class="mask"
    />
    <div
      class="object-panel-item active"
      id="mock-number-item-mm"
    >
      <div
        class="main"
      >
        <button
          class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item"
          type="button"
        >
          <span>
            1
          </span>
        </button>
      </div>
      <div
        class="label"
      >
        mock-label
      </div>
    </div>
  </div>
  <div
    class="adm-popover adm-popover-light number-keyboard"
  >
    <div
      class="adm-popover-arrow"
    >
      <svg
        class="adm-popover-arrow-icon"
        viewBox="0 0 30 16"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M0,0 L30,0 L18.07289,14.312538 C16.65863,16.009645 14.13637,16.238942 12.43926,14.824685 C12.25341,14.669808 12.08199,14.49839 11.92711,14.312538 L0,0 L0,0 Z"
          />
        </g>
      </svg>
    </div>
    <div
      class="adm-popover-inner"
    >
      <div
        class="adm-popover-inner-content"
      >
        <div
          class="input-keys"
        >
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              1
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              2
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              3
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              4
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              5
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              6
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              7
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              8
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              9
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              .
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              0
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              <span
                class="anticon icon"
                role="img"
              >
                <svgr-url
                  aria-hidden="true"
                  classname=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                />
              </span>
            </span>
          </button>
        </div>
        <div
          class="step-buttons"
        >
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              <span
                class="anticon icon"
                role="img"
              >
                <svgr-url
                  aria-hidden="true"
                  classname=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                />
              </span>
            </span>
          </button>
          <button
            class="adm-button adm-button-default adm-button-shape-rounded"
            type="button"
          >
            <span>
              <span
                class="anticon icon"
                role="img"
              >
                <svgr-url
                  aria-hidden="true"
                  classname=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                />
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render correctly select with multiple options 1`] = `
<div>
  <div
    class="mask hide"
  />
  <div
    class="object-panel-item"
    id="mock-select"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded select-button"
        type="button"
      >
        <span>
          <div
            class="selected-content"
          >
            display label 1
            <span
              aria-label="down"
              class="anticon anticon-down"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </div>
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      mock-label
    </div>
  </div>
</div>
`;

exports[`should render correctly select with only one option 1`] = `
<div>
  <div
    class="mask hide"
  />
</div>
`;
